unpackaged/main/default/objects/Customer_Feedback__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Feedbacks</relationshipLabel>
    <relationshipName>Customer_Feedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>