unpackaged/main/default/objects/Customer_Feedback__c/fields/ChannelRef__c.field-meta.xml
<CustomField>
    <fullName>ChannelRef__c</fullName>
    <label>ChannelRef</label>
    <length>255</length>
    <type>Text</type>
</CustomField>