unpackaged/main/default/objects/Customer_Feedback__c/fields/EventType__c.field-meta.xml
<CustomField>
    <fullName>EventType__c</fullName>
    <label>EventType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>