unpackaged/main/default/objects/Customer_Feedback__c/fields/InviteId__c.field-meta.xml
<CustomField>
    <fullName>InviteId__c</fullName>
    <label>InviteId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>