unpackaged/main/default/objects/Customer_Feedback__c/fields/ReviewId__c.field-meta.xml
<CustomField>
    <fullName>ReviewId__c</fullName>
    <label>ReviewId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>