unpackaged/main/default/objects/Customer_Feedback__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Account__c</columns>
    <columns>Case__c</columns>
    <columns>Contact__c</columns>
    <columns>ChannelRef__c</columns>
    <columns>EventType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>EventType__c</field>
        <operation>contains</operation>
        <value>retention</value>
    </filters>
    <label>All</label>
</ListView>