unpackaged/main/default/objects/Customer_Feedback__c/listViews/CSAT.listView-meta.xml
<ListView>
    <fullName>CSAT</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Case__c</columns>
    <columns>Contact__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Customer_Feedback__c.Feedback</value>
    </filters>
    <label>CSAT</label>
</ListView>