unpackaged/main/default/objects/Customer_Feedback__c/listViews/Customer_Objectives.listView-meta.xml
<ListView>
    <fullName>Customer_Objectives</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Case__c</columns>
    <columns>Contact__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Customer_Feedback__c.Feedback</value>
    </filters>
    <label>Customer Objectives</label>
    <sharedTo>
        <role>Team_Enablement</role>
    </sharedTo>
</ListView>