unpackaged/main/default/objects/Customer_Feedback__c/listViews/Customer_Objectives_Missing_Account.listView-meta.xml
<ListView>
    <fullName>Customer_Objectives_Missing_Account</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Case__c</columns>
    <columns>Contact__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>equals</operation>
    </filters>
    <label>Customer Objectives Missing Account</label>
</ListView>